<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="337dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text= "@string/ageValidationTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:text="@string/validationTitleTxt"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="30sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/btnConfirmYear"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="200dp"
        android:text="@string/confirmTxt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYear"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCloseValidation"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="?attr/colorSecondaryVariant"
        app:borderWidth="0dp"
        app:fabCustomSize="48dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509"
        app:rippleColor="#000000"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:useCompatPadding="false"
        android:contentDescription="@string/closeSettingsDesc" />

    <EditText
        android:id="@+id/txtYear"
        android:hint=""
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="245dp"
        android:layout_height="87dp"
        android:layout_marginTop="19dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>