<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".LetterWriting">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/learnLetterImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/a_is_for"
            android:contentDescription="@string/menuImgDesc"
        />

        <uk.ac.rhul.zhac024.final_year_project.letter_tracing_interface.TraceView
            android:id="@+id/traceViewUpperCase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_settings_background" />

        <uk.ac.rhul.zhac024.final_year_project.letter_tracing_interface.TraceView
            android:id="@+id/traceViewLowerCase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_settings_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height= "0dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/penBtn"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.35"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/penTxt"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pencil"
                    app:layout_constraintBottom_toTopOf="@+id/finishBtn"
                    app:layout_constraintEnd_toStartOf="@+id/eraserBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/eraserBtn"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.35"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/eraserTxt"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/erase"
                    app:layout_constraintBottom_toTopOf="@+id/clearBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.74"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/finishBtn"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.35"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/finishTxt"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/finish"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/clearBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.75" />

                <ImageButton
                    android:id="@+id/clearBtn"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.35"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/clearTxt"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/clear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.72"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.75" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>