<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsTxt"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="30sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnClosePopUp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/closeSettingsDesc"
        android:focusable="true"
        android:padding="10dp"
        app:backgroundTint="?attr/colorSecondaryVariant"
        app:borderWidth="0dp"
        app:fabCustomSize="48dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="#AABEC6"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:useCompatPadding="false" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/soundSwitch"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:checked="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:textColorHighlight="?attr/colorSecondaryVariant"
        android:textColorLink="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19999999"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundTxt"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="30sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19999999" />

</androidx.constraintlayout.widget.ConstraintLayout>
